TC001 and 002 committed

--- a/MyTest/test-output/old/Suite/classes.html
+++ b/MyTest/test-output/old/Suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.IBM.eStrategy.MyTest.TC01</td>
+<td>com.IBM.eStrategy.loginPage.TC001_Login_Invalid_Creds</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>sampleTest</td>
+<td>setUp</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
