--- a/MyTest/test-output/emailable-report.html
+++ b/MyTest/test-output/emailable-report.html
@@ -31,24 +31,14 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <body>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em">Default test</td><td class="numi">0</td><td class="numi">0</td><td class="numi">0</td><td class="numi_attn">1</td><td class="numi">6.9 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">Default test</td><td class="numi">1</td><td class="numi">1</td><td class="numi">0</td><td class="numi">0</td><td class="numi">25.6 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="passed" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
-<tr><th colspan="4">Default test &#8212; failed</th></tr>
-<tr class="failedodd"><td rowspan="1">com.IBM.eStrategy.MyTest.TC02_Assert</td><td><a href="#m1"><b>TitleAssertion</b>  </a></td><td class="numi">1</td><td>1513431801358</td><td class="numi">6925</td></tr>
+<tr><th colspan="4">Default test &#8212; passed</th></tr>
+<tr class="passedodd"><td rowspan="1">com.IBM.eStrategy.createAccountPage.TC002_NewAccount</td><td><a href="#m1"><b>registerNewAccount</b>  </a></td><td class="numi">1</td><td>1513794316861</td><td class="numi">10851</td></tr>
 </table>
 <h1>Default test</h1>
-<h2 id="m1">com.IBM.eStrategy.MyTest.TC02_Assert:TitleAssertion</h2>
-<div style="padding-left:3em">
-<p>expected [facebook] but found [Facebook – log in or sign up]</p>
-org.testng.Assert.fail(Assert.java:94)
-<br/>at org.testng.Assert.failNotEquals(Assert.java:494)
-<br/>at org.testng.Assert.assertEquals(Assert.java:123)
-<br/>at org.testng.Assert.assertEquals(Assert.java:176)
-<br/>at org.testng.Assert.assertEquals(Assert.java:186)
-<br/>at com.IBM.eStrategy.MyTest.TC02_Assert.TitleAssertion(TC02_Assert.java:28)
-<br/>25 lines not shown
-</div>
+<h2 id="m1">com.IBM.eStrategy.createAccountPage.TC002_NewAccount:registerNewAccount</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
