--- a/MyTest/test-output/old/Default suite/classes.html
+++ b/MyTest/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.IBM.eStrategy.MyTest.TC02_Assert</td>
+<td>com.IBM.eStrategy.createAccountPage.TC002_NewAccount</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TitleAssertion</td>
+<td>registerNewAccount</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
