--- a/MyTest/test-output/old/Default suite/methods-alphabetical.html
+++ b/MyTest/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="849fce">  <td>17/12/16 19:13:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC02_Assert.TitleAssertion()[pri:0, instance:com.IBM.eStrategy.MyTest.TC02_Assert@1753acfe]">TitleAssertion</td> 
-  <td>main@1291286504</td>   <td></td> </tr>
+<tr bgcolor="dd9bcd">  <td>17/12/20 23:55:27</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;TC002_NewAccount.endTest()[pri:0, instance:com.IBM.eStrategy.createAccountPage.TC002_NewAccount@604ed9f0]">&lt;&lt;endTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@827966648</td>   <td></td> </tr>
+<tr bgcolor="dd9bcd">  <td>17/12/20 23:55:16</td>   <td>-10855</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC002_NewAccount.registerNewAccount()[pri:0, instance:com.IBM.eStrategy.createAccountPage.TC002_NewAccount@604ed9f0]">registerNewAccount</td> 
+  <td>main@827966648</td>   <td></td> </tr>
+<tr bgcolor="dd9bcd">  <td>17/12/20 23:55:03</td>   <td>-24683</td> <td>&nbsp;</td><td title="&gt;&gt;TC002_NewAccount.setUp()[pri:0, instance:com.IBM.eStrategy.createAccountPage.TC002_NewAccount@604ed9f0]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@827966648</td>   <td></td> </tr>
 </table>
